welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
								if(message="Y"){
                                                                          ^